@@ -3,6 +3,7 @@
 - Bugfix (1252431): Fixed unnecessary GC Memory allocation every frame when using timeline  
 - Bugfix: StateDrivenCamera was choosing parent state if only 1 clip in blendstate, even though there was a vcam assigned to that clip
 - Bugfix: brain updates on scene loaded or unloaded
+- Bugfix (1260385): check for prefab instances correctly
 
 <size=20><b>Version 2.6.0</b></size>
 - Added AxisState.IInputProvider API to better support custom input systems
